<!--
  ~ Copyright 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_notice">Macrobenchmark Target App.</string>
    <string name="recyclerDescription">A list of items</string>
    <string name="itemOptions">Item options</string>
    <string name="launchLoginActivity">Login</string>
    <string name="launchFullyDrawn">Fully Drawn</string>
    <string name="launchRecyclerActivity">RecyclerView</string>
    <string name="launchListViewActivity">ListView</string>
    <string name="launchScrollViewActivity">ScrollView</string>
    <string name="launchComposeList">Compose LazyList</string>
    <string name="launchNestedRecyclerActivity">Nested RecyclerView</string>
    <string name="launchNestedRecyclerWithPoolsActivity">Nested RecyclerView With Pools</string>
</resources>
