<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_notice" />

    <Button
        android:id="@+id/launchRecyclerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/launchRecyclerActivity"
        android:text="@string/launchRecyclerActivity" />

    <Button
        android:id="@+id/launchListViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/launchListViewActivity"
        android:text="@string/launchListViewActivity" />

    <Button
        android:id="@+id/launchScrollViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/launchScrollViewActivity"
        android:text="@string/launchScrollViewActivity" />

    <Button
        android:id="@+id/launchComposeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/launchComposeList"
        android:text="@string/launchComposeList" />

    <Button
        android:id="@+id/nestedRecyclerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/launchNestedRecyclerActivity"
        android:text="@string/launchNestedRecyclerActivity" />

    <Button
        android:id="@+id/nestedRecyclerWithPoolsActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/launchNestedRecyclerWithPoolsActivity"
        android:text="@string/launchNestedRecyclerWithPoolsActivity" />

</LinearLayout>
